added metadata for recipes

--- a/.mobile/app.json
+++ b/.mobile/app.json
@@ -2,5 +2,6 @@
   "promptDelete": false,
   "attachmentFolderPath": "./attachments",
   "showUnsupportedFiles": true,
-  "alwaysUpdateLinks": false
+  "alwaysUpdateLinks": false,
+  "newFileLocation": "current"
 }
