--- a/.mobile/app.json
+++ b/.mobile/app.json
@@ -2,6 +2,6 @@
   "promptDelete": false,
   "attachmentFolderPath": "./attachments",
   "showUnsupportedFiles": true,
-  "alwaysUpdateLinks": false,
+  "alwaysUpdateLinks": true,
   "newFileLocation": "current"
 }
